# debug-bank

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md
challenges/: README.md  run-bench.sh
classifier/: symptom-classifier.md
compositions/: C01-write-race-stale-fallback.md  C02-upgrade-cascade-retry-multiplier.md  C03-silent-success-stale-config.md  C04-llm-hallucination-missing-stop.md  C05-prompt-limits-flag-duality.md  README.md
integrations/: claude-code-pre-deploy.md  claude-code.md  codex-cli.md  cursor.md  gemini-cli.md  pre-deploy-check.sh
mcp-server/: README.md  pyproject.toml
mcp-server/src/debug_bank_mcp/: __init__.py  server.py
mcp-server/src/debug_bank_mcp/bridge/: dap_bridge.py
mcp-server/src/debug_bank_mcp/memory/: trajectory_store.py
mcp-server/src/debug_bank_mcp/tools/: classify.py  pattern.py  record.py  score.py  search.py
memory/: domain-catalogs.md  feedback-rules.md  schema.md
patterns/: P01-wrapper-defaults.md  P02-multiple-writers.md  P03-observer-multiplier.md  P04-llm-copies-examples.md  P05-flag-duality.md  P06-dependency-cascade.md  P07-stale-config.md  P08-config-chain-gap.md  P09-auto-apply-corruption.md  P10-contradictory-config.md  P11-credential-scope.md  P12-expression-corruption.md  P13-parse-error-collision.md  P14-expression-prefix.md  P15-multi-output-broken.md  P16-binary-reference.md  P17-context-spoken.md  P18-loop-without-stop.md  P19-prompt-hard-limits.md  P20-filler-pipeline-contention.md  P21-untested-handler-path.md  P22-iterative-fix-regression.md  P23-s2s-native-audio-limits.md  README.md  (+2 more)
(+51 files in other folders)
