[project]
name = "debug-bank-mcp"
version = "0.1.0"
description = "MCP server exposing Debug Bank patterns, classifier, and trajectory memory"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = [
    "mcp>=1.0.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dap = ["debugpy>=1.8.0"]

[project.scripts]
debug-bank-mcp = "debug_bank_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/debug_bank_mcp"]
